test/error/E5.chigfn
{
	"type": "function",
	"name": "helloworld",
	"inputs": [],
	"outputs": []
}
